# NimbleAnalyzer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  inno_setup_script.iss  resources.rc
docs/: Nimble Analyzer Guide_ger.docx
src/: NimbleAnalyzer.cpp  NimbleAnalyzer.h  dataDisplayer.cpp  dataDisplayer.h  fileDialog.h  fileloader.cpp  fileloader.h  logging.cpp  logging.h  main.cpp  project.cpp  project.h  timer.h  ui_helper.cpp  ui_helper.h  utils.cpp  utils.h
